zeal (1:0.5.0-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * New upstream release.

 -- Simon Epskamp <apt@simonsimon.nl>  Mon, 3 Jan 2018 22:37:54 -0400

zeal (1:0.4.0-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * New upstream release.

 -- Simon Epskamp <apt@simonsimon.nl>  Mon, 13 Oct 2016 22:37:54 -0400

zeal (1:0.3.1-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * New upstream release.

 -- Oleg Shparber <trollixx@gmail.com>  Mon, 13 Oct 2016 22:37:54 -0400

zeal (1:0.3.0-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * New upstream release.

 -- Oleg Shparber <trollixx@gmail.com>  Mon, 26 Sep 2016 23:30:13 -0400

zeal (1:0.2.1-2ppa1~#DISTR#1) #DISTR#; urgency=low

  * Add libxcb-keysyms1-dev dependency.

 -- Oleg Shparber <trollixx@gmail.com>  Fri, 20 Nov 2015 00:55:00 -0500

zeal (1:0.2.1-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * New upstream release.

 -- Oleg Shparber <trollixx@gmail.com>  Fri, 20 Nov 2015 00:29:39 -0500

zeal (1:0.1.1-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * New upstream release.

 -- Oleg Shparber <trollixx@gmail.com>  Sun, 10 May 2015 01:52:00 -0700

zeal (1:0.1.0-1ppa1~#DISTR#1) #DISTR#; urgency=low

  * Initial release of Ubuntu PPA package.

 -- Oleg Shparber <trollixx@gmail.com>  Fri, 01 May 2015 01:17:30 -0700