@@ -2,7 +2,7 @@ Source: zeal
 Section: devel
 Priority: extra
 Maintainer: Simon Epskamp <apt@simonsimon.nl>
-Build-Depends: debhelper (>= 8.0.0), qtbase5-private-dev, libqt5webkit5-dev, libqt5x11extras5-dev, libarchive-dev, libappindicator-dev, libxcb-keysyms1-dev, libsqlite3-dev
+Build-Depends: debhelper (>= 8.0.0), qtbase5-private-dev, libqt5webkit5-dev, libqt5x11extras5-dev, libarchive-dev, libappindicator-dev, libxcb-keysyms1-dev, libsqlite3-dev, extra-cmake-modules
 Standards-Version: 3.9.4
 Homepage: http://zealdocs.org
 Vcs-Git: git://github.com/zealdocs/zeal.git
