@@ -9,8 +9,10 @@ include /usr/share/dpkg/default.mk
 export QT_SELECT=qt5
 
 %:
-	dh $@ --buildsystem=qmake --dbg-package=zeal-dbg
+	dh $@ 
 
+
+# dh_make generated override targets
+# This is example for Cmake (See https://bugs.debian.org/641051 )
 override_dh_auto_configure:
-#	dh_auto_configure -- DESTDIR=$(CURDIR)
-	qmake zeal.pro QMAKE_STRIP=:
+	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
